fix: Improve tests.